--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
 
 .hero_image {
     width: 550px;
-    height: 300px;
+    height: 250px;
     margin: auto;
 }
 
@@ -33,8 +33,37 @@ body {
     width: 350px;
     display: flex;
     justify-content: space-around;
+    margin-top: 2rem;
 }
 
 .testo {
     padding: 25px;
+    margin-top: 1rem;
+}
+
+.avatar {
+    border-radius: 50%;
+    width: 70px;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.nome_utente {
+    margin-top: 35px;
+    margin-left: 15px;
+}
+
+.data_creazione_post {
+    margin-left: 105px;
+    margin-top: -35px;
+}
+
+.img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.avatar_nome {
+    display: flex;
 }
